# CI-CD

./: CMakeLists.txt  functions.cpp  functions.h  main.cpp  math_functions.cpp  math_functions.h
.github/workflows/: ci-cd.yml
test/: test.cpp
